--- a/ESCenter.Client/Views/Subject/Detail.cshtml
+++ b/ESCenter.Client/Views/Subject/Detail.cshtml
@@ -1,4 +1,5 @@
-﻿@model CED.Contracts.Subjects.SubjectDto
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model ESCenter.Client.Application.Contracts.Courses.Dtos.SubjectDto
 
 @{
 }
