--- a/ESCenter.Client/Views/Course/Detail.cshtml
+++ b/ESCenter.Client/Views/Course/Detail.cshtml
@@ -1,5 +1,6 @@
-@using CED.Domain.Shared.ClassInformationConsts
-@model ESCenter.Client.Models.ClassInformationDetailViewModel
+@using ESCenter.Domain.Shared.Courses
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model ESCenter.Client.Models.CourseDetailViewModel
 
 @{
 }
@@ -18,50 +19,50 @@
 
         <div class="row">
             <div class="card mb-3 col-lg-12">
-                <h3>@Model.ClassInformationDto.Title</h3>
+                <h3>@Model.CourseDetailDto.Title</h3>
                 <div class="d-flex justify-content-between align-items-center ">
 
                     <h4 class="col-lg-6">
-                        <b>Subject: </b> @Model.ClassInformationDto.Subject.Name
+                        <b>Subject: </b> @Model.CourseDetailDto.SubjectName
                     </h4>
                     <form asp-controller="Course" asp-action="RequestGettingClass" class="col-lg-3">
                         @if (Context.Session.GetString("role") == UserRole.Learner.ToString())
                         {
-                            <button class="btn btn-success" disabled type="submit">Request for this class (<b>Charge</b>: @Model.ClassInformationDto.ChargeFee $)</button>
+                            <button class="btn btn-success" disabled type="submit">Request for this class (<b>Charge</b>: @Model.CourseDetailDto.ChargeFee $)</button>
 
                         }
                         else
                         {
-                            <button class="btn btn-success" type="submit">Request for this class (<b>Charge</b>: @Model.ClassInformationDto.ChargeFee $)</button>
+                            <button class="btn btn-success" type="submit">Request for this class (<b>Charge</b>: @Model.CourseDetailDto.ChargeFee $)</button>
 
                         }
-                        <input value="@Model.ClassInformationDto.Id" hidden="" name="ClassId"/>
+                        <input value="@Model.CourseDetailDto.Id" hidden="" name="ClassId"/>
                     </form>
 
                 </div>
 
                 <p>
-                    @Model.ClassInformationDto.Description
+                    @Model.CourseDetailDto.Description
                 </p>
                 <div class="row">
                     <p>Requirements</p>
                     <div class="course-info d-flex justify-content-between align-items-center">
                         <h5>Status</h5>
-                        <p>@Model.ClassInformationDto.Status</p>
+                        <p>@Model.CourseDetailDto.Status</p>
                     </div>
                     <div class="course-info d-flex justify-content-between align-items-center">
                         <h5>Gender requirement</h5>
-                        <p>@Model.ClassInformationDto.GenderRequirement</p>
+                        <p>@Model.CourseDetailDto.GenderRequirement</p>
                     </div>
                     <div class="course-info d-flex justify-content-between align-items-center">
                         <h5>Academic requirements</h5>
-                        <p>@Model.ClassInformationDto.AcademicLevel</p>
+                        <p>@Model.CourseDetailDto.AcademicLevelRequirement</p>
                     </div>
 
 
                     <div class="course-info d-flex justify-content-between align-items-center">
                         <h5>Learning Mode</h5>
-                        <p>@Model.ClassInformationDto.LearningMode</p>
+                        <p>@Model.CourseDetailDto.LearningMode</p>
                     </div>
                     <p> Informations </p>
 
@@ -69,11 +70,11 @@
 
                         <div class="course-info d-flex justify-content-between align-items-center">
                             <h5>Class' Fee</h5>
-                            <p>$@Model.ClassInformationDto.Fee</p>
+                            <p>$@Model.CourseDetailDto.ChargeFee</p>
                         </div>
                         <div class="course-info d-flex justify-content-between align-items-center">
                             <h5>Charge Fee</h5>
-                            <p>$@Model.ClassInformationDto.ChargeFee</p>
+                            <p>$@Model.CourseDetailDto.ChargeFee</p>
                         </div>
 
 
@@ -81,11 +82,11 @@
                     <div class="col-lg-4 ">
                         <div class="course-info d-flex justify-content-between align-items-center">
                             <h5>Number of students</h5>
-                            <p>@Model.ClassInformationDto.NumberOfLearner</p>
+                            <p>@Model.CourseDetailDto.NumberOfLearner</p>
                         </div>
                         <div class="course-info d-flex justify-content-between align-items-center">
                             <h5>Student's Gender</h5>
-                            <p>@Model.ClassInformationDto.LearnerGender</p>
+                            <p>@Model.CourseDetailDto.LearnerGender</p>
                         </div>
                     </div>
                     <div class="col-lg-4 ">
@@ -93,11 +94,11 @@
 
                         <div class="course-info d-flex justify-content-between align-items-center">
                             <h5>Minute/Session</h5>
-                            <p>@Model.ClassInformationDto.MinutePerSession</p>
+                            <p>@Model.CourseDetailDto.SessionDuration</p>
                         </div>
                         <div class="course-info d-flex justify-content-between align-items-center">
                             <h5>Session/Week</h5>
-                            <p>@Model.ClassInformationDto.SessionPerWeek</p>
+                            <p>@Model.CourseDetailDto.SessionPerWeek</p>
                         </div>
 
 
@@ -118,7 +119,7 @@
         <h3>Related classes</h3>
         <div class="row">
             <div class="col-lg-12 mt-4 mt-lg-0">
-                @foreach (var i in Model.RelatedClasses)
+                @foreach (var i in Model.RelatedCourses)
                 {
                     <div class="course-item">
                         <div class="course-content">
