--- a/ESCenter.Client/Views/Profile/_AllLearningClass.cshtml
+++ b/ESCenter.Client/Views/Profile/_AllLearningClass.cshtml
@@ -1,7 +1,7 @@
-﻿@model CED.Contracts.PaginatedList<CED.Contracts.ClassInformations.Dtos.ClassInformationForListDto>
+﻿@model IEnumerable<ESCenter.Client.Application.Contracts.Courses.Dtos.LearningCourseForListDto>
 @{
-    int i = 0;
-   // Layout = "_ScriptLayout";
+    var i = 0;
+    // Layout = "_ScriptLayout";
 }
 <div class="card">
     <div class="card-body">
@@ -11,12 +11,12 @@
         <table id="example" class="table datatable">
             <thead>
             <tr>
-                <!-- a avatar comlumn will be added -->
+                <!-- a avatar column will be added -->
                 <th scope="col">#</th>
                 <th scope="col">Title</th>
                 <th scope="col">Subject</th>
                 <th scope="col">Status</th>
-                    <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
+                <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -32,9 +32,9 @@
                     <td>@classIn.Title</td>
                     <td>@classIn.SubjectName</td>
                     <td>@classIn.Status</td>
-                   
+
                     <td>
-                        <button type="button" class="btn btn-primary" onclick="OpenGetDialog('@Url.Action("GetLearningClass","Profile",new{id = @classIn.Id})','Detail');">
+                        <button type="button" class="btn btn-primary" onclick="OpenGetDialog('@Url.Action("GetLearningClass", "Profile", new { id = @classIn.Id })','Detail');">
                             Detail
                         </button>
                     </td>
@@ -45,8 +45,3 @@
         <!-- End Table with stripped rows -->
     </div>
 </div>
-
-
-
-
-   
