--- a/ESCenter.Client/Views/Profile/_ChangePassword.cshtml
+++ b/ESCenter.Client/Views/Profile/_ChangePassword.cshtml
@@ -1,15 +1,12 @@
-﻿@model CED.Contracts.Authentication.ChangePasswordRequest
+﻿@model ESCenter.Client.Models.ChangePasswordRequest
 
 <!-- Change Password Form -->
 <form asp-action="ChangePassword" asp-controller="Profile" onsubmit="return callPostActionWithForm(this);">
-    <input asp-for="Id" hidden />
-
     <div class="row mb-3">
         <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
         <div class="col-md-8 col-lg-9">
             <input asp-for="CurrentPassword" type="password" class="form-control" id="currentPassword" value="@Model.CurrentPassword">
             <span asp-validation-for="CurrentPassword" class="text-danger"></span>
-            
         </div>
     </div>
 
@@ -18,16 +15,14 @@
         <div class="col-md-8 col-lg-9">
             <input asp-for="NewPassword" type="password" class="form-control" id="newPassword" value="@Model.NewPassword">
             <span asp-validation-for="NewPassword" class="text-danger"></span>
-            
         </div>
     </div>
 
     <div class="row mb-3">
         <label for="confirmedPassword" class="col-md-4 col-lg-3 col-form-label">Re-enter New Password</label>
         <div class="col-md-8 col-lg-9">
-            <input asp-for="ConfirmedPassword" type="password" class="form-control" id="confirmedPassword" value="@Model.ConfirmedPassword">
-            <span asp-validation-for="ConfirmedPassword" class="text-danger"></span>
-            
+            <input asp-for="ConfirmPassword" type="password" class="form-control" id="confirmedPassword" value="@Model.ConfirmPassword">
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
 
@@ -35,5 +30,5 @@
         <button type="submit" class="btn btn-primary">Change Password</button>
     </div>
 </form>
-                            
+
 <!-- End Change Password Form -->
