--- a/ESCenter.Client/Views/Profile/_ProfileEdit.cshtml
+++ b/ESCenter.Client/Views/Profile/_ProfileEdit.cshtml
@@ -1,33 +1,25 @@
-﻿@using CED.Domain.Shared
+﻿@using ESCenter.Domain.Shared
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model CED.Contracts.Users.LearnerDto
+@model ESCenter.Application.Contracts.Profiles.UserProfileDto
 @{
-    //AddressDto addressDto = ViewData["Addresses"] as AddressDto ?? new AddressDto(new List<CityDto>());
-
-    List<string> genders = EnumProvider.Genders;
-    List<string> academics = EnumProvider.AcademicLevels;
+    var genders = EnumProvider.Genders;
 }
 <!-- Profile Edit Form -->
 
 <form asp-action="Edit" asp-controller="Profile" onsubmit="return callPostActionWithForm(this);">
     <div class="row mb-3">
-        <label asp-for="Image" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
+        <label asp-for="Avatar" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
         <div class="col-md-8 col-lg-9">
-            <img src="@Model.Image"style="max-width: 120px;" alt="Profile" id="avatar">
-            <input id="image" asp-for="Image" hidden type="text"/>
+            <img src="@Model.Avatar" style="max-width: 120px;" alt="Profile" id="avatar">
+            <input id="image" asp-for="Avatar" hidden type="text"/>
             <div class="pt-2">
-
                 <input type="file" id="formFile" name="formFile" style="visibility: hidden; width: 1px; height: 1px" onchange="LoadImage('@Url.Action("ChoosePicture", "Profile", null)','avatar'); return false;"/>
                 <a href="" onclick="document.getElementById('formFile').click(); return false" class="btn btn-primary btn-sm" title="Upload new profile image">
                     <i class="bi bi-upload"></i>
                 </a>
-
-                @* <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"> *@
-                @*     <i class="bi bi-trash"></i> *@
-                @* </a> *@
             </div>
         </div>
-        
+
     </div>
 
     <div class="row mb-3">
@@ -54,21 +46,18 @@
 
         </div>
 
-
     </div>
     <div class="row mb-3">
         <label for="about" class="col-md-4 col-lg-3 col-form-label">Gender</label>
         <div class="col-md-8 col-lg-9">
             <select asp-for="Gender" class="form-select">
-                <option selected>@Model.Gender.ToString()</option>
+                <option selected>@Model.Gender</option>
 
-                @foreach (string i in genders)
+                @foreach (var i in genders.Where(i => i != Model.Gender))
                 {
-                    @if (i != Model.Gender.ToString())
-                    {
-                        <option> @i </option>
-                    }
+                    <option> @i </option>
                 }
+
             </select>
             <span asp-validation-for="Gender" class="text-danger"></span>
 
@@ -86,7 +75,7 @@
 
     </div>
 
-   
+
     <div class="row mb-3">
         <label asp-for="Role" class="col-md-4 col-lg-3 col-form-label">Role</label>
         <div class="col-md-8 col-lg-9">
@@ -98,11 +87,18 @@
     </div>
 
     <div class="row mb-3">
-        <label asp-for="Address" class="col-md-4 col-lg-3 col-form-label">Address</label>
+        <label asp-for="City" class="col-md-4 col-lg-3 col-form-label">City</label>
         <div class="col-md-8 col-lg-9">
-            <input asp-for="Address" type="text" class="form-control" id="Address">
-            <span asp-validation-for="Address" class="text-danger"></span>
+            <input asp-for="City" type="text" class="form-control" id="City">
+            <span asp-validation-for="City" class="text-danger"></span>
+        </div>
+    </div>
 
+    <div class="row mb-3">
+        <label asp-for="Country" class="col-md-4 col-lg-3 col-form-label">Country</label>
+        <div class="col-md-8 col-lg-9">
+            <input asp-for="Country" type="text" class="form-control" id="Country">
+            <span asp-validation-for="Country" class="text-danger"></span>
         </div>
     </div>
 
@@ -124,40 +120,7 @@
 
         </div>
     </div>
-    
-   
 
-    
-    <div class="form-group" hidden>
-        <label asp-for="DeleterUserId" class="control-label"></label>
-        <input asp-for="DeleterUserId" class="form-control"/>
-        <span asp-validation-for="DeleterUserId" class="text-danger"></span>
-    </div>
-    <div class="form-group" hidden>
-        <label asp-for="DeletionTime" class="control-label"></label>
-        <input asp-for="DeletionTime" class="form-control"/>
-        <span asp-validation-for="DeletionTime" class="text-danger"></span>
-    </div>
-    <div class="form-group" hidden>
-        <label asp-for="LastModificationTime" class="control-label"></label>
-        <input asp-for="LastModificationTime" class="form-control"/>
-        <span asp-validation-for="LastModificationTime" class="text-danger"></span>
-    </div>
-    <div class="form-group" hidden>
-        <label asp-for="LastModifierUserId" class="control-label"></label>
-        <input asp-for="LastModifierUserId" class="form-control"/>
-        <span asp-validation-for="LastModifierUserId" class="text-danger"></span>
-    </div>
-    <div class="form-group" hidden>
-        <label asp-for="CreationTime" class="control-label"></label>
-        <input asp-for="CreationTime" class="form-control"/>
-        <span asp-validation-for="CreationTime" class="text-danger"></span>
-    </div>
-    <div class="form-group" hidden>
-        <label asp-for="CreatorUserId" class="control-label"></label>
-        <input asp-for="CreatorUserId" class="form-control"/>
-        <span asp-validation-for="CreatorUserId" class="text-danger"></span>
-    </div>
     <input type="hidden" asp-for="Id"/>
 
     <div class="text-center">
