--- a/ESCenter.Client/Views/Profile/_ProfileOverview.cshtml
+++ b/ESCenter.Client/Views/Profile/_ProfileOverview.cshtml
@@ -1,4 +1,4 @@
-﻿@model CED.Contracts.Users.LearnerDto
+﻿@model ESCenter.Application.Contracts.Profiles.UserProfileDto
 
 
 <h5 class="card-title">About</h5>
@@ -23,7 +23,7 @@
 
 <div class="row">
     <div class="col-lg-3 col-md-4 label">Address</div>
-    <div class="col-lg-9 col-md-8">@Model.Address</div>
+    <div class="col-lg-9 col-md-8">@Model.City @Model.Country</div>
 </div>
 
 <div class="row">
