--- a/ESCenter.Client/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Client/Views/Shared/_Layout.cshtml
@@ -1,12 +1,10 @@
-﻿@using CED.Domain.Shared.ClassInformationConsts
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using System.Security.Claims
+@using ESCenter.Domain.Shared.Courses
 @{
     string? name = Context.Session.GetString("name");
     string? image = Context.Session.GetString("image");
     string? role = Context.Session.GetString("role");
-   
-
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -70,7 +68,7 @@
                     </li>
 
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" asp-action="Profile" asp-controller="Profile">
+                        <a class="dropdown-item d-flex align-items-center" asp-action="Index" asp-controller="Profile">
                             <i class="bi bi-person"></i>
                             <span>My Profile</span>
                         </a>
@@ -79,22 +77,6 @@
                         <hr class="dropdown-divider">
                     </li>
 
-                    @* <li> *@
-                    @*     <a class="dropdown-item d-flex align-items-center" href="users-profile.html"> *@
-                    @*         <i class="bi bi-gear"></i> *@
-                    @*         <span>Account Settings</span> *@
-                    @*     </a> *@
-                    @* </li> *@
-                    @* <li> *@
-                    @*     <hr class="dropdown-divider"> *@
-                    @* </li> *@
-                    @* *@
-                    @* <li> *@
-                    @*     <a class="dropdown-item d-flex align-items-center" href="pages-faq.html"> *@
-                    @*         <i class="bi bi-question-circle"></i> *@
-                    @*         <span>Need Help?</span> *@
-                    @*     </a> *@
-                    @* </li> *@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
@@ -137,16 +119,16 @@
                         <a asp-action="About" asp-controller="Home">About</a>
                     </li>
                     <li>
-                        <a asp-action="Index" asp-controller="ClassInformation">New Classes</a>
+                        <a asp-action="Index" asp-controller="Course">New Classes</a>
                     </li>
                     <li>
-                        <a asp-action="Index" asp-controller="TutorInformation">Tutors</a>
+                        <a asp-action="Index" asp-controller="Tutor">Tutors</a>
                     </li>
 
                     @if (User.FindFirst(ClaimTypes.Role)?.Value != UserRole.Tutor.ToString())
                     {
                         <li>
-                            <a asp-action="TutorRegistration" asp-controller="TutorInformation">Tutor Registration </a>
+                            <a asp-action="TutorRegistration" asp-controller="Tutor">Tutor Registration </a>
                         </li>
                     }
 
@@ -158,7 +140,7 @@
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
-            <a asp-action="Create" asp-controller="ClassInformation" class="get-started-btn">Get Started</a>
+            <a asp-action="Create" asp-controller="Course" class="get-started-btn">Get Started</a>
         </div>
 
 
@@ -308,21 +290,21 @@
         </div>
     </div>
 </footer>
-    <!-- Messenger Chat plugin Code -->
-    <div id="fb-root"></div>
+<!-- Messenger Chat plugin Code -->
+<div id="fb-root"></div>
 
-    <!-- Your Chat plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
+<!-- Your Chat plugin code -->
+<div id="fb-customer-chat" class="fb-customerchat">
+</div>
 
-    <script>
+<script>
         var chatbox = document.getElementById('fb-customer-chat');
         chatbox.setAttribute("page_id", "102093292942240");
         chatbox.setAttribute("attribution", "biz_inbox");
     </script>
 
-    <!-- Your SDK code -->
-    <script>
+<!-- Your SDK code -->
+<script>
         window.fbAsyncInit = function () {
             FB.init({
                 xfbml: true,
