--- a/ESCenter.Client/Views/Tutor/_TutorRegistrationForm.cshtml
+++ b/ESCenter.Client/Views/Tutor/_TutorRegistrationForm.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ESCenter.Domain.Shared
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using ESCenter.Client.Application.Contracts.Courses.Dtos
-@model ESCenter.Client.Application.Contracts.Users.Tutors.TutorBasicForRegisterCommand
+@model ESCenter.Client.Models.TutorRegistrationViewModel
 @{
     var genders = EnumProvider.FullGendersOption;
     var academicLevels = EnumProvider.AcademicLevels;
@@ -40,14 +40,16 @@
 
         </div>
     </div>
-    <div class="card mt-5" id="tutorMajorCard">
+    
+    @* Change this into list of combobox of majors *@
+    <div class="card mt-5" id="tutorMajorCard"> 
         <div class="card-body">
             <div class="card-title row">
                 <h5 class="col-11">Add Your Majors</h5>
-                <button type="button" class="btn btn-primary col-1" onclick="OpenGetDialog('@Url.Action("Subjects", "Subject")','Add your major')">
-                    <span class="bi bi-plus-circle"> </span>
-                    Add
-                </button>
+                @* <button type="button" class="btn btn-primary col-1" onclick="OpenGetDialog('@Url.Action("Subjects", "Subject")','Add your major')"> *@
+                @*     <span class="bi bi-plus-circle"> </span> *@
+                @*     Add *@
+                @* </button> *@
 
             </div>
 
@@ -55,7 +57,7 @@
             <div class="list-group">
                 @foreach (var s in subjects)
                 {
-                    <input name="SubjectId" value="@s.Id" hidden="hidden"/>
+                    <input name="majors" value="@s.Id" hidden="hidden"/>
                     <a asp-action="Detail" asp-controller="Subject" asp-route-id="@s.Id" class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">@s.Name</h5>
@@ -88,7 +90,7 @@
                     @* </div> *@
 
                     <div class="pt-2">
-                        <input type="file" id="file" name="files" multiple="multiple" onchange="LoadImage('@Url.Action("ChooseProfilePictures", "Profile", null)','file'); return false;"/>
+                        <input type="file" id="file" name="imageFileUrls" multiple="multiple" onchange="LoadImage('@Url.Action("ChooseProfilePictures", "Profile", null)','file'); return false;"/>
                     </div>
                 </div>
 
