Update validation for every request and fix bugs at pipeline behavior

--- a/ESCenter.Administrator/Views/Course/Create.cshtml
+++ b/ESCenter.Administrator/Views/Course/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ESCenter.Admin.Application.Contracts.Courses.Dtos
-@model ESCenter.Admin.Application.Contracts.Courses.Dtos.CourseForCreateDto
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model ESCenter.Admin.Application.ServiceImpls.Courses.Commands.CreateCourse.CourseForCreateDto
 
 @{
     ViewData["Title"] = "Create new user";
