--- a/ESCenter.Administrator/Views/Course/_EditRequest.cshtml
+++ b/ESCenter.Administrator/Views/Course/_EditRequest.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model ESCenter.Admin.Application.Contracts.Courses.Dtos.CourseRequestCancelDto
+@model ESCenter.Admin.Application.ServiceImpls.Courses.Queries.GetCourseRequest.CourseRequestCancelDto
 
 <form asp-action="CancelRequest" asp-controller="Course" asp-route-courseId="@Model.CourseId" asp-route-requestId="@Model.CourseRequestId" onsubmit="return callPostActionWithForm(this)">
     <div class="card">
