--- a/ESCenter.Client/Views/Course/Create.cshtml
+++ b/ESCenter.Client/Views/Course/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ESCenter.Client.Application.Contracts.Courses.Dtos
 @using ESCenter.Domain.Shared
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using ESCenter.Application.Contracts.Profiles
+@using ESCenter.Application.Accounts.Queries.GetUserProfile
 @model ESCenter.Client.Application.Contracts.Courses.Dtos.CourseCreateForLearnerDto
 
 @{
