--- a/ESCenter.Client/Views/Tutor/TutorRegistration.cshtml
+++ b/ESCenter.Client/Views/Tutor/TutorRegistration.cshtml
@@ -1,6 +1,6 @@
 ﻿@using ESCenter.Domain.Shared.Courses
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model ESCenter.Application.Contracts.Profiles.UserProfileDto
+@model ESCenter.Application.Accounts.Queries.GetUserProfile.UserProfileDto
 
 @{
     ViewData["Title"] = "Tutor Registration";
