--- a/ESCenter.Administrator/Views/Tutor/Create.cshtml
+++ b/ESCenter.Administrator/Views/Tutor/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model ESCenter.Admin.Application.Contracts.Users.Tutors.TutorCreateDto
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model ESCenter.Admin.Application.ServiceImpls.Tutors.Commands.CreateTutor.TutorCreateDto
 
 @{
     ViewData["Title"] = "Create";
