--- a/ESCenter.Client/Views/Profile/_ProfileEdit.cshtml
+++ b/ESCenter.Client/Views/Profile/_ProfileEdit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using ESCenter.Domain.Shared
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model ESCenter.Application.Contracts.Profiles.UserProfileDto
+@model ESCenter.Application.Accounts.Queries.GetUserProfile.UserProfileDto
 @{
     var genders = EnumProvider.Genders;
 }
