--- a/ESCenter.Client/Views/Profile/_ProfileOverview.cshtml
+++ b/ESCenter.Client/Views/Profile/_ProfileOverview.cshtml
@@ -1,5 +1,4 @@
-﻿@model ESCenter.Application.Contracts.Profiles.UserProfileDto
-
+﻿@model ESCenter.Application.Accounts.Queries.GetUserProfile.UserProfileDto
 
 <h5 class="card-title">About</h5>
 <p class="small fst-italic">@Model.Description</p>
