Fix bugs and working on aspnet mvc client

--- a/ESCenter.Client/Views/Authentication/ForgotPassword.cshtml
+++ b/ESCenter.Client/Views/Authentication/ForgotPassword.cshtml
@@ -2,55 +2,52 @@
     Layout = "_LoginLayout";
     bool isFail = ViewBag.isFail ?? false;
 }
+<section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-    <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
+                <div class="card mb-3">
 
-                    <div class="card mb-3">
+                    <div class="card-body">
+                        <div class="pt-4 pb-2">
+                            <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
+                            <p class="text-center small">Enter your username & password to login</p>
+                            @if (isFail == true)
+                            {
+                                <p class="text-center small re text-danger">
+                                    Incorrect email address or phone number
+                                    The email address or mobile number you entered isn't connected to an account.
+                                </p>
+                            }
+                        </div>
 
-                        <div class="card-body">
-                            <div class="pt-4 pb-2">
-                                <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                                <p class="text-center small">Enter your username & password to login</p>
-                                @if (isFail == true)
-                                {
-                                    <p class="text-center small re text-danger">
-                                        Incorrect email address or phone number
-                                        The email address or mobile number you entered isn't connected to an account.
-                                    </p>
-                                }
+
+                        <form class="row g-3 needs-validation" asp-action="ForgotPassword" asp-controller="Authentication">
+
+                            <div class="col-12">
+                                <label for="yourUsername" class="form-label">Your email</label>
+                                <div class="input-group has-validation">
+                                    <span class="input-group-text" id="inputGroupPrepend">@@</span>
+                                    <input type="text" name="email" class="form-control" id="yourUsername"/>
+                                    <div class="invalid-feedback">Please enter your username.</div>
+                                </div>
                             </div>
 
+                            <div class="col-12">
+                                <button class="btn btn-primary w-100" type="submit">Send</button>
+                            </div>
+                            <div class="col-12">
+                                <p class="small mb-0">If you had an account <a asp-controller="Authentication" asp-action="Login">Sign in</a></p>
+                            </div>
+                        </form>
 
-
-                            <form class="row g-3 needs-validation" asp-action="ForgotPassword" asp-controller="Authentication">
-
-                                <div class="col-12">
-                                    <label for="yourUsername" class="form-label">Your email</label>
-                                    <div class="input-group has-validation">
-                                        <span class="input-group-text" id="inputGroupPrepend">@@</span>
-                                        <input type="text" asp-for="Email" class="form-control" id="yourUsername" required>
-                                        <div class="invalid-feedback">Please enter your username.</div>
-                                    </div>
-                                </div>
-                              
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100" type="submit">Send</button>
-                                </div>
-                                <div class="col-12">
-                                    <p class="small mb-0">If you had an account <a asp-controller="Authentication" asp-action="Login">Sign in</a></p>
-                                </div>
-                            </form>
-
-                        </div>
                     </div>
-
-
-
                 </div>
+
+
             </div>
         </div>
+    </div>
 
-    </section>
+</section>
