--- a/ESCenter.Client/Views/Course/Index.cshtml
+++ b/ESCenter.Client/Views/Course/Index.cshtml
@@ -8,7 +8,7 @@
 <!-- ======= Breadcrumbs ======= -->
 <div class="breadcrumbs">
     <div class="container">
-    <h2>New Classes</h2>
+    <h2>Courses</h2>
             <p>
                 Level up your tutoring career and increase your earning potential with our new tutor classes. Gain valuable experience, expand your skill set, and open doors to more lucrative opportunities in the education industry.
             </p>
