--- a/ESCenter.Client/Views/Home/Index.cshtml
+++ b/ESCenter.Client/Views/Home/Index.cshtml
@@ -129,7 +129,7 @@
             {
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="member">
-                        <img src="@i.Image" class="img-fluid" alt="" style="height:450px;">
+                        <img src="@i.Avatar" class="img-fluid" alt="" style="height:450px;">
                         <div class="member-content">
                             <h4>
                                 <a asp-controller="Tutor" asp-action="Detail" asp-route-id="@i.Id">@i.FirstName @i.LastName</a>
