--- a/ESCenter.Client/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Client/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                         <a asp-action="About" asp-controller="Home">About</a>
                     </li>
                     <li>
-                        <a asp-action="Index" asp-controller="Course">New Classes</a>
+                        <a asp-action="Index" asp-controller="Course">Courses</a>
                     </li>
                     <li>
                         <a asp-action="Index" asp-controller="Tutor">Tutors</a>
@@ -131,7 +131,6 @@
                             <a asp-action="TutorRegistration" asp-controller="Tutor">Tutor Registration </a>
                         </li>
                     }
-
 
                     <li>
                         <a asp-controller="Home" asp-action="Contact">Contact</a>
