--- a/ESCenter.Client/Views/Tutor/Index.cshtml
+++ b/ESCenter.Client/Views/Tutor/Index.cshtml
@@ -107,7 +107,7 @@
             {
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="member">
-                        <img src="@i.Image" class="img-fluid" alt="" style="height:450px;">
+                        <img src="@i.Avatar" class="img-fluid" alt="" style="height:450px;">
                         @* <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt=""> *@
 
                         <div class="member-content">
