Fixing UI on client

--- a/ESCenter.Client/Views/Tutor/TutorRegistration.cshtml
+++ b/ESCenter.Client/Views/Tutor/TutorRegistration.cshtml
@@ -115,7 +115,7 @@
             </div>
         </div>
 
-        <partial name="_TutorRegistrationForm" view-data="ViewData"/>
+        <partial name="_TutorRegistrationForm" view-data="ViewData" model="new ESCenter.Client.Models.TutorRegistrationViewModel()"/>
     </div>
 </section>
 <!-- End Course Details Section -->
