--- a/ESCenter.Administrator/Views/Profile/_ChangePassword.cshtml
+++ b/ESCenter.Administrator/Views/Profile/_ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model ESCenter.Application.Accounts.Commands.ChangePassword.ChangePasswordCommand
 
-0<form asp-action="ChangePassword" asp-controller="Profile">
+<form asp-action="ChangePassword" asp-controller="Profile">
     <div class="row mb-3">
         <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
         <div class="col-md-8 col-lg-9">
