--- a/ESCenter.Client/Views/Authentication/Register.cshtml
+++ b/ESCenter.Client/Views/Authentication/Register.cshtml
@@ -74,7 +74,7 @@
                                     <button class="btn btn-primary w-100" type="submit">Create Account</button>
                                 </div>
                                 <div class="col-12">
-                                    <p class="small mb-0">Already have an account? <a href="/Authentication">Log in</a></p>
+                                    <p class="small mb-0">Already have an account? <a asp-controller="Authentication" asp-action="Index">Log in</a></p>
                                 </div>
                             </form>
 
