--- a/ESCenter.Client/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Client/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
+    <link href="~/assets/vendor/alertifyjs/css/alertify.min.css" rel="stylesheet">
     <link href="~/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
     <link href="~/assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="~/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -329,6 +330,7 @@
 <script src="~/assets/vendor/swiper/swiper-bundle.min.js"></script>
 <script src="~/assets/vendor/php-email-form/validate.js"></script>
 <script src="~/simple-datatables/simple-datatables.js"></script>
+<script src="~/assets/vendor/alertifyjs/alertify.min.js"></script>
 
 <!-- Template Main JS File -->
 <script src="~/assets/js/main.js"></script>
